--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "aos": "^2.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-text-transition": "^1.3.0",
+    "react-transition-group": "^4.4.2",
+    "react-vertical-timeline-component": "^3.3.3",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
